Replace SSHFS sysroot with container image mount for cross-compilation
The build pipeline no longer requires a live Pi filesystem mount (~/mnt/pios12_root)
during native image builds. The graalvm-pi-builder container image serves as the
aarch64 sysroot via `podman image mount`, providing identical OS/glibc/architecture
without Pi connectivity.

Key changes:
- pom.xml: sysroot paths now use ${sysroot} Maven property (passed by deploy script)
- setup-aarch64-libs.sh: reads SYSROOT and SYSROOT_GRAALVM_HOME from environment
- deploy-pi-native.sh: implements podman unshare self-reinvocation pattern for rootless
  image mount access; passes Maven repo path through unshare boundary
- New scripts: mount-image-sysroot.sh, unmount-image-sysroot.sh, setup-libs-with-mount.sh
- Makefile: setup-libs now wraps mount/setup/unmount; deploy-native-podman marked as not viable
- Documentation: updated CLAUDE.md and README.md to reflect container sysroot approach

Build verified: 19.26 MB binary, 29s cross-compile time, 17 downcalls registered,
deployed to BlackRaspberry successfully. Entire native build is now Pi-independent.

Significance: GitHub Actions CI for GraalVM native builds (Phase F) is now
infrastructure-unblocked — runner requires only x86_64 + Podman + container image.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>